Fix favourite feature and auction parsing
- Fixed auction parsing by adding item_id and status mapping in ResponseHandler
- Corrected LIST response format between server and client
- Fixed favourite add/remove commands to use item_id instead of auction_id
- Simplified favourite requests (removed redundant user_id from client messages)
- Fixed ClientHandler favourite processing and request indexing
- Added proper favourite state handling in UI
- Updated ItemViewController to instantly toggle Add/Remove Favourite button
- Restored auction cards rendering on HomePage